objects/Site_Config_Details__c.object
<CustomObject>
    <description>Holding place for dealer social media login information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Config Details</relationshipLabel>
        <relationshipName>Site_Config_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Explain_Other__c</fullName>
        <label>Explain Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>Id field from Location Config Details in the Social instance of Salesforce.</description>
        <label>ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivate_Site_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivate Site Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Launch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account in this record must match the account in the Launch record.</errorMessage>
            <filterItems>
                <field>Launch__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Site Config Details</relationshipLabel>
        <relationshipName>Site_Config_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Site__c</fullName>
        <label>Link to Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerSEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social/Rep Mngmt - Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type_on_Launch__c</fullName>
        <formula>IF(  AND(
INCLUDES(Launch__r.Product_Type__c, &quot;Social Media&quot;) ,
INCLUDES(Launch__r.Product_Type__c, &quot;Reputation Management&quot;)
), &quot;Social Media and Reputation Management&quot; ,

IF( INCLUDES(Launch__r.Product_Type__c, &quot;Social Media&quot;), &quot;Social Media&quot;,
IF( INCLUDES(Launch__r.Product_Type__c, &quot;Reputation Management&quot;), &quot;Reputation Management&quot;, 
&quot;Check Launch Record&quot;)))</formula>
        <label>Product Type on Launch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Config_Type__c</fullName>
        <label>Site Config Type</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerRater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmunds.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flickr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gmail/Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Places</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insider Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judy&apos;s Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowem - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowem - Generated Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testimonial Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wordpress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <formula>IF(OR(  
WebId_Status__c = &quot;Inactive&quot;,  
Inactivate_Site_Config__c =True,
Launch__r.Open_Status__c = &quot;Cancelled&quot;
), &quot;Inactive&quot;,

IF( IsBlank(WebID__c), &quot;In Build&quot;, 
&quot;Active&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <description>A Workflow updates this field with the date the first time the verified box is checked.</description>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if dealer verification and username/password have been completed.</inlineHelpText>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebID_From_Launch__c</fullName>
        <formula>Launch__r.WebID__r.Name</formula>
        <label>WebID From Launch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Site Config Details</relationshipLabel>
        <relationshipName>Site_Config_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebID_on_Account__c</fullName>
        <formula>IF( And(Account__c &lt;&gt; WebID__r.Account__c , Not(isblank(WebID__c ))),


&quot;WRONG WEBID&quot;, &quot;&quot;)</formula>
        <label>WebID on Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebId_Status__c</fullName>
        <formula>Text(WebID__r.Status__c)</formula>
        <label>WebId Status</label>
        <type>Text</type>
    </fields>
    <label>Site Config Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_Build</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>WebID_From_Launch__c</columns>
        <columns>WebID__c</columns>
        <columns>Status2__c</columns>
        <columns>Verified__c</columns>
        <columns>Launch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Site_Config_Details__c.Social_Sites_and_Listings</value>
        </filters>
        <filters>
            <field>Status2__c</field>
            <operation>equals</operation>
            <value>In Build</value>
        </filters>
        <label>In Build</label>
        <language>en_US</language>
        <sharedTo>
            <role>IFS</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Needs_Verification</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Site_Config_Type__c</columns>
        <columns>Link_to_Site__c</columns>
        <columns>Verified__c</columns>
        <columns>Notes__c</columns>
        <columns>WebID_From_Launch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status2__c</field>
            <operation>equals</operation>
            <value>In Build</value>
        </filters>
        <filters>
            <field>Verified__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Site_Config_Details__c.Social_Sites_and_Listings</value>
        </filters>
        <label>Needs Verification</label>
        <sharedTo>
            <role>IFS</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
            <role>ServiceOps</role>
            <role>ServiceOpsManager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SCD-{00000000}</displayFormat>
        <label>Site Config Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Config Details</pluralLabel>
    <recordTypes>
        <fullName>Social_Sites_and_Listings</fullName>
        <active>true</active>
        <label>Social Sites and Listings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_wrong_webid</fullName>
        <active>true</active>
        <errorConditionFormula>WebID_on_Account__c = &quot;WRONG WEBID&quot;</errorConditionFormula>
        <errorMessage>You must select the correct WebID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Explain_Other_Site_Config_Type</fullName>
        <active>true</active>
        <description>Forces user to enter an explanation of &quot;Other&quot; as an entry in the site config type field.</description>
        <errorConditionFormula>NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; ISPICKVAL(Site_Config_Type__c , &quot;Other&quot;) &amp;&amp; isblank(Explain_Other__c )</errorConditionFormula>
        <errorDisplayField>Explain_Other__c</errorDisplayField>
        <errorMessage>Please enter an explanation of &quot;Other&quot; or select a different value from the Site Config Type picklist.</errorMessage>
    </validationRules>
</CustomObject>